# dbt-cloud-jobs

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_cloud_jobs.yml  makefile  pyproject.toml
.github/workflows/: ci_pipeline.yml  publish.yml
dbt_cloud_jobs/: dbt_api_helpers.py  dbt_cloud_helpers.py  exceptions.py  main.py  parser.py  sync_job.py  utils.py  validator.py
tests/: conftest.py  pytest_helpers.py  test_dbt_cloud_helpers.py  test_logger.py  test_main.py  test_utils.py
tests/fixtures/invalid/: duplicate_job_names.yml  job_with_id_specified.yml  job_with_inconsistent_source_values.yml  job_with_non_dbt_command.yml  more_than_one_account_id.yml
tests/fixtures/valid/: ci_job.yml  job_with_cron_schedule.yml  job_with_exact_schedule.yml  job_with_hours_of_the_day_schedule.yml  job_with_id_specified.yml  job_with_minimal_definition.yml  job_with_multiple_steps.yml  prod_job.yml  simple_job.yml
tests/integration/: test_dbt_cloud_helpers.py  test_integration_dbt_cloud_helpers.py  test_integration_main.py  test_integration_sync_job.py  test_main.py  test_sync_job.py
tests/unit/: test_dbt_api_helpers.py  test_dbt_cloud_helpers.py  test_logger.py  test_main.py  test_unit_dbt_api_helpers.py  test_unit_logger.py  test_unit_main.py  test_unit_utils.py  test_utils.py  test_validator.py  test_version.py
