[project]
authors = [{name="Padraic Slattery", email="pgoslatara@gmail.com"}]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "requests",
  "pydantic (>=2)",
  "pyyaml"
]
description = "Version control your dbt Cloud jobs with YML."
keywords = [
  "python",
  "cli",
  "dbt",
  "CI/CD",
]
license ="MIT"
maintainers = [{name="Padraic Slattery", email="pgoslatara@gmail.com"}]
name = "dbt-cloud-jobs"
readme = "README.md"
repository = "https://github.com/pgoslatara/dbt-cloud-jobs"
requires-python = ">=3.9,<3.13"
version = "0.0.0"

[project.scripts]
dbt_cloud_jobs = "dbt_cloud_jobs.main:main"

[tool.black]
line-length = 99
include = '/project$|\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.poetry]
packages = [
    { include = "dbt_cloud_jobs" },
]
requires-poetry =">=2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
pytest = "*"
pytest-xdist = "*"

[tool.poetry.group.test.dependencies]
pytest-cov = "*"

[tool.poetry_bumpversion.file."./dbt_cloud_jobs/version.py"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
